@@ -10,7 +10,7 @@ from sqlalchemy.orm import relationship, synonym, validates
 from sqlalchemy import (
     Table,
     Column,
-    #Boolean,
+    Boolean,
     Integer,
     Float,
     String,
@@ -698,7 +698,7 @@ class Type(Entity):
     __mapper_args__ = {"polymorphic_identity": "Type"}
     type_id_local = Column("id", Integer, ForeignKey("Entities.id"),
                            primary_key=True)
-    _target_entity_type = Column(String)
+    _target_entity_type = Column("target_entity_type", String)
     
     
     
@@ -916,7 +916,8 @@ class StatusList(Entity):
         secondary="StatusList_Statuses",
     )
     
-    _target_entity_type = Column(String(128), nullable=False, unique=True)
+    _target_entity_type = Column("target_entity_type", String(128),
+                                 nullable=False, unique=True)
     
     
     
@@ -971,6 +972,7 @@ class StatusList(Entity):
     
     
     #----------------------------------------------------------------------
+    @synonym_for("_target_entity_type")
     @property
     def target_entity_type(self):
         """The entity type which this StatusList is valid for.
@@ -1356,6 +1358,7 @@ class Repository(Entity):
     """
     
     __tablename__ = "Repositories"
+    __mapper_args__ = {"polymorphic_identity": "Repository"}
     repository_id = Column(
         "id",
         Integer,
@@ -1451,6 +1454,477 @@ class Repository(Entity):
                self.linux_path == other.linux_path and \
                self.osx_path == other.osx_path and \
                self.windows_path == other.windows_path
+
+
+
+
+
+
+########################################################################
+class FilenameTemplate(Entity):
+    """Holds templates for filename conventions.
+    
+    FilenameTemplate objects help to specify where to place a file related to
+    its :attr:`~stalker.core.models.FilenameTemplate.target_entity_type`.
+    
+    The first very important usage of FilenameTemplates is to place asset file
+    :class:`~stalker.core.models.Version`'s to proper places inside a
+    :class:`~stalker.core.models.Project`'s
+    :class:`~stalker.core.models.Structure`.
+    
+    Secondly, it can be used in the process of injecting files in to the
+    repository. By creating templates for :class:`~stalker.core.models.Links`.
+    
+    :param str target_entity_type: The class name that this FilenameTemplate
+      is designed for. You can also pass the class itself. So both of the
+      examples below can work::
+        
+        new_filename_template1 = FilenameTemplate(target_entity_type="Asset")
+        new_filename_template2 = FilenameTemplate(target_entity_type=Asset)
+    
+      A TypeError will be raised when it is skipped or it is None and a
+      ValueError will be raised when it is given as and empty string.
+    
+    :param str path_code: A `Jinja2`_ template code which specifies the path of
+      the given item. It is relative to the project root. A typical example
+      could be::
+        
+        asset_path_code = "ASSETS/{{asset.code}}/{{task.code}}/"
+    
+    :param str file_code: A `Jinja2`_ template code which specifies the file
+      name of the given item. It is relative to the
+      :attr:`~stalker.core.models.FilenameTemplate.path_code`. A typical
+      example could be::
+        
+        asset_file_code = "{{asset.code}}_{{version.take}}_{{task.code}}_"\\
+                          "{{version.version}}_{{user.initials}}"
+      
+      Could be set to an empty string or None, the default value is None.
+    
+    :param str output_path_code: A Jinja2 template code specifying where to
+      place the outputs of the applied
+      :attr:`~stalker.core.models.FilenameTemplate.target_entity_type`. If it
+      is empty and the
+      :attr:`~stalker.core.models.FilenameTemplate.output_is_relative` is True,
+      then the outputs will naturally be in the same place with the
+      :attr:`~stalker.core.models.FilenameTemplate.path_code`. If the
+      :attr:`~stalker.core.models.FilenameTemplate.output_is_relative` is False
+      then :attr:`~stalker.core.models.FilenameTemplate.output_path_code` will
+      be the same code with
+      :attr:`~stalker.core.models.FilenameTemplate.path_code`.
+      
+      It can be None, or an empty string, or it can be skipped.
+    
+    :param str output_file_code: A Jinja2 template code specifying what will be
+      the file name of the output. If it is skipped or given as None or as an
+      empty string, it will be the same with the
+      :attr:`~stalker.core.models.FilenameTemplate.file_code`.
+      
+      It can be skipped, or can be set to None or an empty string. The default
+      value is None, and this will set the
+      :attr:`~stalker.core.models.FilenameTemplate.output_file_code` to the
+      same value with :attr:`~stalker.core.models.FilenameTemplate.file_code`.
+    
+    :param bool output_is_relative: A bool value specifying if the
+      :attr:`~stalker.core.models.FilenameTemplate.output_path_code` is
+      relative to the :attr:`~stalker.core.models.FilenameTemplate.path_code`.
+      The default value is True. Can be skipped, any other than a bool value
+      will be evaluated to a bool value.
+    
+    Examples:
+    
+    A template for asset versions can be used like this::
+      
+      from stalker.core.models import Type, FilenameTemplate, TaskTemplate
+      
+      # create a couple of variables
+      path_code = "ASSETS/{{asset_type.name}}/{{task_type.code}}"
+      
+      file_code =
+      "{{asset.name}}_{{take.name}}_{{asset_type.name}}_v{{version.version_number}}"
+      
+      output_path_code = "OUTPUT"
+      output_file_code = file_code
+      
+      # create a type for modeling task
+      modeling = Type(
+          name="Modeling",
+          code="MODEL",
+          description="The modeling step of the asset",
+          target_entity_type=Task
+      )
+      
+      # create a "Character" Type for Asset classes
+      character = Type(
+          name="Character",
+          description="this is the character asset type",
+          target_entity_type=Asset
+      )
+      
+      # now create our FilenameTemplate
+      char_template = FilenameTemplate(
+          name="Character",
+          description="this is the template which explains how to place \
+Character assets",
+          target_entity_type="Asset",
+          path_code=path_code,
+          file_code=file_code,
+          output_path_code=output_path_code,
+          output_file_code=output_file_code,
+          output_is_relative=True,
+      )
+      
+      # assign this type template to the structure of the project with id=101
+      myProject = query(Project).filter_by(id=101).first()
+      
+      # append the type template to the structures' templates
+      myProject.structure.templates.append(char_template)
+      
+      # commit everything to the database
+      session.commit()
+    
+    Now with the code above, whenever a new
+    :class:`~stalker.core.models.Version` created for a **Character**
+    asset, Stalker will automatically place the related file to a certain
+    folder and with a certain file name defined by the template. For example
+    the above template should render something like below for Windows::
+    
+      |- M:\\\PROJECTS  --> {{repository.path}}
+       |- PRENSESIN_UYKUSU  --> {{project.code}}
+        |- ASSETS  --> "ASSETS"
+         |- Character  --> {{asset_type.name}}
+          |- Olum  --> {{asset.name}}
+           |- MODEL  --> {{task_type.code}}
+            |- Olum_MAIN_MODEL_v001.ma --> {{asset.name}}_\
+{{take.name}}_{{asset_type.name}}_v{{version.version_number}}
+    
+    And one of the best side is you can create a version from Linux, Windows or
+    OSX all the paths will be correctly handled by Stalker.
+    
+    .. _Jinja2: http://jinja.pocoo.org/docs/
+    """
+    
+    
+    
+    __tablename__ =  "FilenameTemplates"
+    filenameTemplate_id = Column( "id", Integer,ForeignKey("Entities.id"),
+                                  primary_key=True)
+    _target_entity_type = Column("target_entity_type", String)
+    path_code = Column(String)
+    file_code = Column(String)
+    output_path_code = Column(String)
+    output_file_code = Column(String)
+    output_is_relative = Column(Boolean)
+    
+    
+    
+    #----------------------------------------------------------------------
+    def __init__(self,
+                 target_entity_type=None,
+                 path_code=None,
+                 file_code=None,
+                 output_path_code=None,
+                 output_file_code=None,
+                 output_is_relative=True,
+                 **kwargs):
+        super(FilenameTemplate, self).__init__(**kwargs)
+        
+        self._target_entity_type = \
+            self._validate_target_entity_type(target_entity_type)
+        self.path_code = path_code
+        self.file_code = file_code
+        self.output_is_relative = output_is_relative
+        self.output_path_code = output_path_code
+        self.output_file_code = output_file_code
+    
+    
+    
+    #----------------------------------------------------------------------
+    @validates("path_code")
+    def _validate_path_code(self, key, path_code_in):
+        """validates the given path_code attribute for several conditions
+        """
+        
+        # check if it is None
+        if path_code_in is None:
+            path_code_in = u""
+        
+        path_code_in = unicode(path_code_in)
+        
+        return path_code_in
+    
+    
+    
+    #----------------------------------------------------------------------
+    @validates("file_code")
+    def _validate_file_code(self, key, file_code_in):
+        """validates the given file_code attribute for several conditions
+        """
+        
+        # check if it is None
+        if file_code_in is None:
+            file_code_in = u""
+        
+        # convert it to unicode
+        file_code_in = unicode(file_code_in)
+        
+        return file_code_in
+    
+    
+    
+    #----------------------------------------------------------------------
+    @validates("output_path_code")
+    def _validate_output_path_code(self, key, output_path_code_in):
+        """validates the given output_path_code value
+        """
+        
+        if output_path_code_in == None or output_path_code_in == "":
+            if self.output_is_relative:
+                output_path_code_in = ""
+            else:
+                output_path_code_in = self.path_code
+        
+        return output_path_code_in
+    
+    
+    
+    #----------------------------------------------------------------------
+    @validates("output_file_code")
+    def _validate_output_file_code(self, key, output_file_code_in):
+        """validates the given output_file_code value
+        """
+        
+        if output_file_code_in == None or output_file_code_in == "":
+            if self.output_is_relative:
+                output_file_code_in = ""
+            else:
+                output_file_code_in = self.file_code
+        
+        return output_file_code_in
+    
+    
+    
+    #----------------------------------------------------------------------
+    @validates("output_is_relative")
+    def _validate_output_is_relative(self, key, output_is_relative_in):
+        """validates the given output_is_relative value
+        """
+        
+        return bool(output_is_relative_in)
+    
+    
+    
+    #----------------------------------------------------------------------
+    def _validate_target_entity_type(self, target_entity_type_in):
+        """validates the given target_entity_type attribute for several
+        conditions
+        """
+        
+        # check if it is None
+        if target_entity_type_in is None:
+            raise TypeError("target_entity_type can not be None")
+        
+        if isinstance(target_entity_type_in, type):
+            target_entity_type_in = target_entity_type_in.__name__
+        
+        return target_entity_type_in
+    
+    
+    
+    #----------------------------------------------------------------------
+    @synonym_for("_target_entity_type")
+    @property
+    def target_entity_type(self):
+        """The target entity type this FilenameTemplate object should work on.
+        
+        Should be a string value or the class itself
+        """
+        
+        return self._target_entity_type
+    
+    
+    
+    #----------------------------------------------------------------------
+    def __eq__(self, other):
+        """checks the equality of the given object to this one
+        """
+        
+        return super(FilenameTemplate, self).__eq__(other) and \
+               isinstance(other, FilenameTemplate) and \
+               self.target_entity_type == other.target_entity_type and \
+               self.path_code == other.path_code and \
+               self.file_code == other.file_code and \
+               self.output_path_code == other.output_path_code and \
+               self.output_file_code == other.output_file_code
+
+
+
+
+
+########################################################################
+class Structure(Entity):
+    """Holds data about how the physical files are arranged in the :class:`~stalker.core.models.Repository`.
+    
+    Structures are generally owned by :class:`~stalker.core.models.Project`
+    objects. Whenever a :class:`~stalker.core.models.Project` is physicaly
+    created, project folders are created by looking at
+    :attr:`~stalker.core.models.Structure.custom_template` of the
+    :class:`~stalker.core.models.Structure`, the
+    :class:`~stalker.core.models.Project` object is generally given to the
+    :class:`~stalker.core.models.Structure`. So it is possible to use a
+    variable like "{{project}}" or derived variables like::
+      
+      {% for seq in project.sequences %}
+          {{do something here}}
+    
+    :param templates: A list of
+      :class:`~stalker.core.models.FilenameTemplate`\ s which
+      defines a specific template for the given
+      :attr:`~stalker.core.models.FilenameTemplate.target_entity_type`\ s.
+    
+    :type templates: list of :class:`~stalker.core.models.FilenameTemplate`\ s
+    
+    :param str custom_template: A string containing several lines of folder
+      names. The folders are relative to the
+      :class:`~stalker.core.models.Project` root. It can also contain a Jinja2
+      Template code. Which will be rendered to show the list of folders to be
+      created with the project. The Jinja2 Template is going to have the
+      {{project}} variable. The important point to be careful about is to list
+      all the custom folders of the project in a new line in this string. For
+      example a :class:`~stalker.core.models.Structure` for a
+      :class:`~stalker.core.models.Project` can have the following
+      :attr:`~stalker.core.models.Structure.custom_template`::
+        
+        ASSETS
+        {% for asset in project.assets %}
+            {% set asset_root = 'ASSETS/' + asset.code %}
+            {{asset_root}}
+            
+            {% for task in asset.tasks %}
+                {% set task_root = asset_root + '/' + task.code %}
+                {{task_root}}
+        
+        SEQUENCES
+        {% for seq in project.sequences %}}
+            {% set seq_root = 'SEQUENCES/' + {{seq.code}} %}
+            {{seq_root}}/Edit
+            {{seq_root}}/Edit/AnimaticStoryboard
+            {{seq_root}}/Edit/Export
+            {{seq_root}}/Storyboard
+            
+            {% for shot in seq.shots %}
+                {% set shot_root = seq_root + '/SHOTS/' + shot.code %}
+                {{shot_root}}
+                
+                {% for task in shot.tasks %}
+                    {% set task_root = shot_root + '/' + task.code %}
+                    {{task_root}}
+      
+      The above example has gone far beyond deep than it is needed, where it
+      started to define paths for :class:`~stalker.core.models.Asset`\ s. Even
+      it is possible to create a :class:`~stalker.core.models.Project`
+      structure like that, in general it is unnecessary. Because the above
+      folders are going to be created but they are probably going to be empty
+      for a while, because the :class:`~stalker.core.models.Asset`\ s are not
+      created yet (or in fact no :class:`~stalker.core.models.Version`\ s are
+      created for the :class:`~stalker.core.models.Task`\ s). Anyway, it is
+      much suitable and desired to create this details by using
+      :class:`~stalker.core.models.FilenameTemplate` objects. Which are
+      spesific to certain
+      :attr:`~stalker.core.FilenameTemplate.target_entity_type`\ s. And by
+      using the :attr:`~stalker.core.models.Structure.custom_template`
+      attribute, Stalker can not place any source or output file of a
+      :class:`~stalker.core.models.Version` in the
+      :class:`~stalker.core.models.Repository` where as it can by using
+      :class:`~stalker.core.models.FilenameTemplate`\ s.
+      
+      But for certain types of :class:`~stalker.core.models.Task`\ s it is may
+      be good to previously create the folder structure just because in certain
+      environments (programs) it is not possible to run a Python code that will
+      place the file in to the Repository like in Photoshop.
+      
+      The ``custom_template`` parameter can be None or an empty string if it is
+      not needed. Be carefull not to pass a variable other than a string or
+      unicode because it will use the string representation of the given
+      variable.
+    
+    A :class:`~stalker.core.models.Structure` can not be created without a
+    ``type`` (__strictly_typed__ = True). By giving a ``type`` to the
+    :class:`~stalker.core.models.Strucutre`, you can create one structure for
+    **Commmercials** and another project structure for **Movies** and another
+    one for **Print** projects etc. and can reuse them with new
+    :class:`~stalker.core.models.Project`\ s.
+    """
+    
+    
+    
+    __strictly_typed__ = True
+    
+    __tablename__ = "Structures"
+    __mapper_args__ = {"polymorphic_identity": "Structure"}
+    
+    structure_id = Column(
+        "id",
+        Integer,
+        ForeignKey("Entities.id"),
+        primary_key=True,
+    )
+    
+    templates = relationship(
+        "FilenameTemplate",
+        secondary="Structure_FilenameTemplates"
+    )
+    
+    custom_template = Column("custom_template", String)
+    
+    
+    
+    #----------------------------------------------------------------------
+    def __init__(self, templates=None, custom_template=None, **kwargs):
+        super(Structure, self).__init__(**kwargs)
+        
+        if templates is None:
+            templates = []
+        
+        self.templates = templates
+        self.custom_template = custom_template
+    
+    
+    
+    #----------------------------------------------------------------------
+    def __eq__(self, other):
+        """the equality operator
+        """
+        
+        return super(Structure, self).__eq__(other) and \
+               isinstance(other, Structure) and \
+               self.templates == other.templates and \
+               self.custom_template == other.custom_template
+    
+    
+    
+    #----------------------------------------------------------------------
+    @validates("custom_template")
+    def _validate_custom_template(self, key, custom_template_in):
+        """validates the given custom_template value
+        """
+        
+        return custom_template_in
+    
+    
+    
+    #----------------------------------------------------------------------
+    @validates("templates")
+    def _validate_templates(self, key, template_in):
+        """validates the given template value
+        """
+        
+        if not isinstance(template_in, FilenameTemplate):
+            raise TypeError("all the elements in the templates should be a "
+                            "list of stalker.core.models.FilenameTemplate "
+                            "instances")
+        
+        return template_in
 
 
 
@@ -2138,4 +2612,13 @@ StatusList_Statuses = Table(
         ForeignKey("Statuses.id"),
         primary_key=True
     )
+)
+
+
+
+# STRUCTURE_FILENAMETEMPLATES
+Structure_FilenameTemplates = Table(
+    "Structure_FilenameTemplates", Base.metadata,
+    Column("structure_id", Integer, ForeignKey("Structures.id")),
+    Column("filenametemplate_id", Integer, ForeignKey("FilenameTemplates.id"))
 )
