@@ -16,6 +16,8 @@ v0.1.2.a1
    * Status
    * StatusList
    * Repository
+   * Structure
+   * FilenameTemplate
 
  * Empty :class:`~stalker.core.models.StatusList`\ s are now allowed. The
    validation overhead is left to the SOM user.
